2007-11-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclInt.decls, generic/tclIntDecls.h: Use unsigned char for
	* generic/tclExecute.c, generic/tclUtil.c:     TclByteArrayMatch
	and don't allow a nocase option. [Bug 1828296]
	For INST_STR_MATCH, ignore pattern type for TclByteArrayMatch case.

	* generic/tclBinary.c (Tcl_GetByteArrayFromObj): check type before
	func jump (perf)

2007-11-07  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclStubInit.c:			added TclByteArrayMatch
	* generic/tclInt.decls				for efficient glob
	* generic/tclIntDecls.h:			matching of ByteArray
	* generic/tclUtil.c (TclByteArrayMatch):	Tcl_Objs, used in
	* generic/tclExecute.c (TclExecuteByteCode):	INST_STR_MATCH.
							[Bug 1827996]
	
	* generic/tclIO.c (TclGetsObjBinary):		add an efficient binary
							path for [gets].
	(DoWriteChars):					special case for 1-byte
							channel write.

2007-11-06  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclEncoding.c: Version of the embedded iso8859-1 encoding
	handler that is faster (functions to do the encoding know exactly what
	they're doing instead of pulling it from a table, though the table
	itself has to be retained for use by shift encodings that depend on
	iso8859-1.) [Patch 1826906], committing for dkf.

2007-11-05  Andreas Kupries  <andreask@activestate.com>

	* generic/tclConfig.c (Tcl_RegisterConfig): Modified to not extend the
	config database if the encoding provided by the user is not found
	(venc == NULL). Scripts expecting the data will error out, however we
	neither crash nor provide bogus information. See [Bug 983509] for more
	discussion.

	* unix/tclUnixChan.c (TtyGetOptionProc): Accepted [Patch 1823576]
	provided by Stuart Cassof <stwo@users.sourceforge.net>. The patch adds
	the necessary utf/external conversions to the handling of the arguments
	of option -xchar which will allow the use of \0 and similar characters.

2007-11-03  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclTest.c (TestSetCmd2):